<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyCompanion</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_test">Test</string>
    <string name="title_activity_event_time">EventTime</string>
    <string name="title_activity_event_location">EventLocation</string>
    <string name="title_activity_contacts">Contacts</string>
    <string name="title_activity_dialog_test">DialogTest</string>
    <string name="notification_ticker">Message Sent!</string>
    <string name="notification_title">Remind Me</string>
    <string name="notification_content">Message sent for the event</string>
    <string name="leave">Leave</string>
    <string name="reach">Reach</string>
    <string name="message">Message:</string>
    <string name="enter_message">Please Enter Message</string>
    <string name="when_event">When do you want this event?</string>

</resources>
