<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="my.awesom.app.mycompanion.EventLocation">


    <include

        android:id="@+id/toolbar_event_location"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1.0">

        <fragment
            android:id="@+id/mapfragment"
            class="com.google.android.gms.maps.MapFragment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_weight="0.4" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_text_view"
                android:orientation="vertical">


                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/when_event" />


                <RadioGroup
                    android:id="@+id/transitionChoice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="1.0">

                    <RadioButton
                        android:id="@+id/transition_leave"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:checked="true"
                        android:text="@string/leave" />

                    <RadioButton
                        android:id="@+id/transition_enter"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:text="@string/reach" />
                </RadioGroup>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.6"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_text_view"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/messageLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/message"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/message"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:hint="@string/enter_message"
                            android:lines="2" />
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <android.support.v7.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/background_text_view"
                            android:orientation="vertical">


                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:text="Do you want to send SMS?"
                                android:textSize="20sp"
                                android:textStyle="bold" />


                            <RadioGroup
                                android:id="@+id/smschoice"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal"
                                android:weightSum="1.0">

                                <RadioButton
                                    android:id="@+id/yes_sms"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="0.5"
                                    android:checked="true"
                                    android:text="Yes" />

                                <RadioButton
                                    android:id="@+id/no_sms"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="0.5"
                                    android:text="No" />
                            </RadioGroup>
                        </LinearLayout>
                    </android.support.v7.widget.CardView>

                    <android.support.v7.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <LinearLayout
                            android:id="@+id/contactLayout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:background="@drawable/background_text_view"
                            android:orientation="vertical">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal"
                                android:weightSum="1.0">

                                <TextView
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="0.7"
                                    android:text="Please Select Contact"
                                    android:textSize="20sp"
                                    android:textStyle="bold" />

                                <ImageButton
                                    android:id="@+id/contactIntentButton"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:layout_margin="10dp"
                                    android:layout_weight="0.3"
                                    android:background="@android:color/holo_blue_light"
                                    android:src="@drawable/ic_contact" />
                            </LinearLayout>


                            <TextView

                                android:id="@+id/contacts_selected"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content" />

                        </LinearLayout>
                    </android.support.v7.widget.CardView>
                </LinearLayout>
            </ScrollView>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>